--- a/LoRaWAN-HelloWorld-radiolib/platformio.ini
+++ b/LoRaWAN-HelloWorld-radiolib/platformio.ini
@@ -83,9 +83,9 @@ build_flags =
 ; This is for experiments
 [voc-experiment-1-110]
 build_flags =
-    -D RADIOLIB_LORAWAN_DEV_EUI="0x70B3D57ED006B069" ; direct
-    -D RADIOLIB_LORAWAN_APP_KEY="0x50, 0x94, 0x11, 0xA7, 0x1E, 0x13, 0x16, 0xE3, 0x4F, 0xDD, 0xFF, 0x0E, 0xA6, 0x06, 0x29, 0x85" ; msb
-    -D RADIOLIB_LORAWAN_NWK_KEY="0x0C, 0xA5, 0x90, 0x8F, 0x18, 0x89, 0xA4, 0xE3, 0x99, 0xA3, 0xC2, 0x0A, 0xFF, 0x9F, 0x77, 0x45" ; msb
+    -D RADIOLIB_LORAWAN_DEV_EUI="0x70B3D57ED006B489" ; direct
+    -D RADIOLIB_LORAWAN_APP_KEY="0x3F, 0x1F, 0x68, 0x63, 0x26, 0xCC, 0xE3, 0xC1, 0x1F, 0xE9, 0xBB, 0xAB, 0x4D, 0xEE, 0xF2, 0xA7" ; msb
+    -D RADIOLIB_LORAWAN_NWK_KEY="0x97, 0x79, 0x6A, 0xBB, 0xEC, 0x1E, 0x8D, 0xBA, 0x2D, 0x7A, 0xDB, 0x8C, 0x7D, 0x94, 0x87, 0x4C" ; msb
 
 ; This is for experiments
 [0001-plant-00-00]
@@ -176,7 +176,7 @@ build_flags =
 
 ; Main local environment
 [env]
-upload_port = /dev/ttyUSB0
+upload_port = COM9
 
 ; Build configurations
 [env:ttn_sandbox_lorawan_v110_sx1276_radiolib_esp32dev_voc_radiolib_tmp_v110_1]
